test/syc/bad/defnoswitch.c
/*
 * Default label without enclosing switch statement
 */

int main(void)
{
default:
	return 0;
}
